--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         box-sizing: border-box;
         background-color: #428f58;
         border-radius: 32px;
-        margin-bottom: 10%;
+        margin-bottom: 2%;
       }
 
       .main {
@@ -147,8 +147,8 @@
         align-items: center;
         height: 60px;
         font-size: 16px;
-        padding-left: 60px;
-        padding-right: 60px;
+        padding-left: 30px;
+        padding-right: 30px;
         color: #fff;
         text-decoration: none;
       }
@@ -193,14 +193,14 @@
         <div class="container">
           <div class="main__action">
             <h1>
-              Как осознанно работать с криптовалютой в 2023 году и
+              Виртуальные помощники с искусственным интеллектом
               <span id="typed"></span>
               <div style="display: none" id="typed-strings">
-                <span>принимать платежи</span>
-                <span>показывать услуги</span>
+                <span>для бизнеса</span>
+                <span>для телеграм ботов</span>
               </div>
             </h1>
-            <p>Даже в условиях блокировки бирж, западных санкций и скачков курса</p>
+            <p>Узнай первым о преимуществах и  использовании искусственного интеллекта</p>
             <button>
               <a href="#">Получить информацию</a>
             </button>
